--- a/app.yaml
+++ b/app.yaml
@@ -5,20 +5,32 @@ api_version: 1
 threadsafe: yes
 
 handlers:
+  
 - url: /favicon\.ico
   static_files: favicon.ico
   upload: favicon\.ico
+
 - url: /stylesheets
   static_dir: stylesheets
+
 - url: /images
   static_dir: static/images
-- url: .*
-  script: main.app
+
 - url: /registro
   script: registro.app
+
+- url: /iniciosesion
+  script: iniciosesion.app
+
+- url: /cerrarsesion
+  script: iniciosesion.app
+
+- url: .*
+  script: main.app
 
 libraries:
 - name: webapp2
   version: "2.5.2"
+
 - name: jinja2
   version: latest
